--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/markdown-component": "^1.0.5",
     "@astrojs/mdx": "^0.18.2",
     "@astrojs/partytown": "^1.2.0",
     "astro": "^2.0.18"
