--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "@astrojs/mdx": "^0.18.2",
     "@astrojs/partytown": "^1.2.0",
-    "astro": "^2.0.18"
+    "@astrojs/react": "^2.3.2",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "astro": "^2.0.18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
