--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^0.18.2",
     "@astrojs/partytown": "^1.2.0",
     "@astrojs/react": "^2.3.2",
+    "@astrojs/rss": "^3.0.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "astro": "^2.0.18",
