--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^8.0.0",
     "@astrojs/mdx": "^2.0.0",
     "@astrojs/react": "^3.0.7",
     "@astrojs/rss": "^4.0.1",
