--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "astro": "^4.0.3",
-    "astro-icon": "^0.8.2",
+    "astro-icon": "^1.0.0-next.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
