--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^2.0.0",
     "@astrojs/react": "^3.0.7",
     "@astrojs/rss": "^4.0.1",
+    "@supabase/supabase-js": "^2.39.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "astro": "^4.0.3",
