--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@astrojs/mdx": "^2.0.0",
     "@astrojs/react": "^3.0.7",
     "@astrojs/rss": "^4.0.1",
-    "@astrojs/tailwind": "^5.0.4",
+    "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-    "astro": "^4.0.3",
-    "astro-icon": "^1.0.0-next.2",
+    "astro": "^4.1.1",
+    "astro-icon": "^1.0.2",
     "prettier-plugin-astro": "^0.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
