--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
 		"@astrojs/mdx": "^2.0.0",
 		"@astrojs/react": "^3.0.7",
 		"@astrojs/rss": "^4.0.1",
-		"@supabase/supabase-js": "^2.39.0",
 		"@astrojs/tailwind": "^5.1.0",
+		"@nanostores/react": "^0.7.2",
+		"@supabase/supabase-js": "^2.39.0",
 		"@types/react": "^18.2.20",
 		"@types/react-dom": "^18.2.7",
 		"astro": "^4.1.1",
 		"astro-icon": "^1.0.2",
+		"nanostores": "^0.10.0",
 		"prettier-plugin-astro": "^0.12.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
