--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@astrojs/react": "^3.0.7",
 		"@astrojs/rss": "^4.0.1",
 		"@astrojs/tailwind": "^5.1.0",
+		"@nanostores/persistent": "^0.10.1",
+		"@nanostores/query": "^0.2.10",
 		"@nanostores/react": "^0.7.2",
 		"@supabase/supabase-js": "^2.39.0",
 		"@types/react": "^18.2.20",
