--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"nanostores": "^0.10.0",
 		"prettier-plugin-astro": "^0.12.2",
 		"react": "^18.2.0",
+		"react-canvas-confetti": "^2.0.7",
 		"react-dom": "^18.2.0",
 		"tailwindcss": "^3.4.0"
 	},
