--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@astrojs/react": "^3.0.7",
 		"@astrojs/rss": "^4.0.1",
 		"@astrojs/tailwind": "^5.1.0",
+		"@getbrevo/brevo": "^2.1.1",
 		"@nanostores/persistent": "^0.10.1",
 		"@nanostores/query": "^0.2.10",
 		"@nanostores/react": "^0.7.2",
